Update 'hytwsvi0a-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:4c4695ba1282fe0b36ea22352e9ce6ff13be2b29@sha256:cda3a77dd02bf4c5bdc0f1e91b4e103e9474175d696803b7c927e5f4e9cf56f3

--- a/components/hytwsvi0a-python/overlays/development/deployment-patch.yaml
+++ b/components/hytwsvi0a-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: hytwsvi0a-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:4c4695ba1282fe0b36ea22352e9ce6ff13be2b29@sha256:cda3a77dd02bf4c5bdc0f1e91b4e103e9474175d696803b7c927e5f4e9cf56f3
+          name: container-image
